# src/adapter/schema/event.ts
@@ -1,5 +1,5 @@
 import { z } from "zod";
-import { Event } from "../../domain/entity/event.js";
+import { Event, EventList } from "../../domain/entity/event.js";
 
 export const EventId = z.object({
   eventId: z.string(),
@@ -20,11 +20,8 @@ export const EventCreateRequest = z.object({
     .openapi({ example: "2025-04-02T01:00:00.000Z" }),
   location: z.string().openapi({ example: "Event location" }),
 });
-export type EventCreateRequest = z.infer<typeof EventCreateRequest>;
 
 export const EventUpdateRequest = EventCreateRequest;
-
-export type EventUpdateRequest = z.infer<typeof EventUpdateRequest>;
 
 export const EventResponse = z.object({
   id: z.string(),
@@ -36,11 +33,35 @@ export const EventResponse = z.object({
 });
 export type EventResponse = z.infer<typeof EventResponse>;
 
-export const toEventCreateResponse = (event: Event): EventResponse => ({
+export const EventListRequest = z.object({
+  q: z.string().optional(),
+  startDate: z.string().datetime().optional(),
+  endDate: z.string().datetime().optional(),
+  order: z.enum(["asc", "desc"]).optional(),
+  orderBy: z.enum(["startDate", "endDate", "name", "createdAt"]).optional(),
+  page: z.number().optional(),
+  limit: z.number().optional(),
+});
+
+export const EventListResponse = z.object({
+  events: z.array(EventResponse),
+  total: z.number(),
+});
+export type EventListResponse = z.infer<typeof EventListResponse>;
+
+export const toEventResponse = (event: Event): EventResponse => ({
   id: event.id,
   name: event.name,
   description: event.description,
   startDate: event.startDate.toISOString(),
   endDate: event.endDate.toISOString(),
   location: event.location,
+});
+
+export const toEventListResponse = (events: EventList): EventListResponse => ({
+  events: events.events.map((event) => {
+    console.log("event", event);
+    return toEventResponse(event);
+  }),
+  total: events.total,
 });
